--- a/_notes/Public/수업 중 질문 답변.md
+++ b/_notes/Public/수업 중 질문 답변.md
@@ -7,12 +7,12 @@ katex: true
 ## 5월 1일
 1. 
 ## 4월 21일
-1. (수익 6번) 모든 실수 $x$에 대하여 $\log_{|a-1|}(x^2+ax+a)$가 정의되기 위한 정수 $a$의 값의 범위를 구하시오.
+1. (수익 6번) 모든 실수 $$x$$에 대하여 $\log_{|a-1|}(x^2+ax+a)$가 정의되기 위한 정수 $a$의 값의 범위를 구하시오.
    밑조건에서 $a\neq2, 1, 0$임을 확인한 후, 진수조건에서 이차부등식 $x^2+ax+a>0$을 풉니다. 
 2. (수익 7번) 1이 아닌 네 양수 $a, b, x, y$가 $\left(\dfrac{a}{b}\right)^x=a^y$를 만족시킬 때, 다음 중 $\dfrac{x}{x-y}$를 $a, b$로 나타낸 것은? (단, $x\neq y$)
    지수법칙을 이용하여 $b^x=a^{x-y}$임을 알아낸 후, 양변에 $x-y$제곱근을 하고 로그의 정의를 이용하여 정리합니다.
 ## 4월 20일
-1. $y=2^x,\ y=\log_2(-x+a+1)+1,\ y=2^{x-a},\ y=4$로 둘러싸인 도형의 넓이를 구하시오.
+1. $$y=2^x,\ y=\log_2(-x+a+1)+1,\ y=2^{x-a},\ y=4$$로 둘러싸인 도형의 넓이를 구하시오.
    $y=2^x$는 $(0, 1),\ (2, 4)$를 지나고 $(2, 4)$는 $y=\log_2(-x+a+1)+1$도 지나므로 대입해서 풀면 $a=7$입니다. 지수함수를 평행이동한 부분의 넓이는 직사각형의 넓이와 같으므로 $S=(4-1)\times7=21$입니다. 
 2. 둘레의 길이가 12이고 중심각의 크기가 2일 때, 이 부채꼴의 넓이를 구하시오. 
    둘레의 길이$=2r+l,\quad l=r\theta$를 이용하여 구합니다. 호도법으로 각을 표시했을 때 $\pi$가 없더라도 각이 됩니다.
